--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.10",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "prisma": "^6.11.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
