--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - db
     environment:
       DATABASE_URL: postgres://myuser:mypassword@db:5432/mydatabase
+    command: sh -c "npx prisma migrate deploy && node dist/index.js"
 
   frontend:
     build: ./frontend
@@ -27,6 +28,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    environment:
+      NEXT_PUBLIC_API_URL: http://backend:4000
 
 volumes:
   postgres-data:
