--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - db
     environment:
       DATABASE_URL: postgres://myuser:mypassword@db:5432/mydatabase
+      FRONTEND_URL: http://frontend:3000
     command: sh -c "npx prisma migrate deploy && node dist/index.js"
 
   frontend:
