fix: :bug: fixed bug with docker env variables

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,10 @@ FROM node:18
 # Diretório de trabalho
 WORKDIR /app
 
+# Aceita argumento passado pelo docker-compose
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 # Copia dependências
 COPY package.json package-lock.json ./
 
@@ -13,7 +17,7 @@ RUN npm install
 # Copia o restante do código
 COPY . .
 
-# Build do Next
+# Build do Next (com a variável NEXT_PUBLIC_API_URL já setada)
 RUN npm run build
 
 # Expõe a porta do Next
