--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,17 +20,20 @@ services:
       - db
     environment:
       DATABASE_URL: postgres://myuser:mypassword@db:5432/mydatabase
-      FRONTEND_URL: http://frontend:3000
+      FRONTEND_URL: http://localhost:3000
     command: sh -c "npx prisma migrate deploy && node dist/index.js"
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        NEXT_PUBLIC_API_URL: http://localhost:4000
     ports:
       - "3000:3000"
     depends_on:
       - backend
     environment:
-      NEXT_PUBLIC_API_URL: http://backend:4000
+      NEXT_PUBLIC_API_URL: http://localhost:4000
 
 volumes:
   postgres-data:
